Version 1.7.0
    * development version
    * added new autoscroll plugin
    * added support for window.onload event
    * added support for external.AddSearchProvider js function
    * completely rewritten bookmarks (including multi-level folders support)
    * menus are not closed when opening links with middle mouse button
    * support for shadow builds with Qt Creator

Version 1.6.6
    * released 12 May 2014
    * added new AutoScroll plugin
    * added new F12 shortcut for Web Inspector
    * fixed: correctly switching between tabbars when closing tabs
    * fixed: draw tabbar base even when there are no tabs in main tabbar
    * fixed: position of add tab button when there are no tabs in main tabbar
    * mac: define application category in Info.plist
    * windows: load font.ttf (if exists) and use it as app font
    * linux: fixed setting correct paths for portable mode

Version 1.6.5
    * released 18 April 2014
    * fixed build issues on Mac
    * fixed error handling when downloading CA certificates bundle
    * fixed error handling when downloading AdBlock subscriptions
    * fixed loading KWalletPasswords plugin

Version 1.6.4
    * released 14 April 2014
    * enabled sending DoNotTrack header by default
    * updated ca-bundle certificates
    * use same session files with both Qt4 and Qt5
    * fixed: Click2Flash playing videos on YouTube with Qt5
    * fixed: hiding close button on current tab when dragging it with Qt5
    * fixed: double clicking on scroll buttons in tabbar with Qt5
    * fixed: text visibility in speeddial inputs with dark themes
    * fixed: getting tab index with rtl layout
    * fixed: ctrl+up shortcut in websearchbar correctly select first item
    * fixed: correctly loading translations of all plugins

Version 1.6.3
    * released 14 February 2014
    * addded new Spanish (Mexico) translation
    * option to change list of SslV3 forced sites in settings.ini